# tyche

./: .firebaserc  .gitignore  Cargo.toml
.github/workflows/: auth.yml  character.yml  check.yml  client.yml  google-cloudrun-docker.yml  google-docker.yml
gateway/: Dockerfile  Program.cs  gateway.csproj  ocelot.json
gateway/Properties/: launchSettings.json
iac/: auth.yaml  character.yml
public/: index.html  script.js
tyche-auth/: Cargo.toml  Dockerfile
tyche-auth/src/: main.rs
tyche-character/: Cargo.toml
tyche-character/migrations/: 20240127124109_character.sql
tyche-character/src/: config.rs  lib.rs  main.rs
tyche-character/src/http/: character.rs  mod.rs  state.rs
tyche-characters/src/: main.rs
tyche-client/: Cargo.toml
tyche-client/src/: config.rs  lib.rs  main.rs  menu.rs  token.rs  user.rs
tyche-client/src/bevy_async/: mod.rs
tyche-client/src/bevy_world/: mod.rs
tyche-client/src/firebase/: mod.rs
tyche-client/src/imgui/: change_color.rs  choose_character.rs  choose_server.rs  create_character.rs  mod.rs
tyche-client/src/menu/: login_page.rs  mod.rs
tyche-cloud/: Cargo.toml  Dockerfile
tyche-cloud/public/: index.html  script.js
tyche-cloud/src/: main.rs
tyche-host/: Cargo.toml
tyche-host/src/: lib.rs  main.rs
