[workspace]
resolver = "2"

members = [ "tyche-*" ]

[workspace.dependencies]
bevy = { version = "0.12.0", default-features = false, features = ["dynamic_linking"] }
bevy_renet = "0.0.10"
renet = { version = "0.0.14", features = ["serde"] }

tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
bincode = "1.3.3"

# Logging
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "env"] }

firebase-auth = { version = "0.4.1", features = ["axum"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
