[package]
name = "tyche-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_egui = "0.24.0"
bevy-inspector-egui = "0.22.1"

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.111"

reqwest = { version = "0.11.22", features = ["blocking", "json"] }
open = "5.0.1"
jsonwebtoken = "9.2.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
bevy_renet = "0.0.10"
tyche-host = { version = "0.1.0", path = "../tyche-host" }
renet = { version = "0.0.14", features = ["serde"] }
bincode = "1.3.3"
