[package]
name = "tyche-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, features = ["default"] }
bevy_renet.workspace = true
bevy_egui = "0.24.0"
bevy-inspector-egui = "0.22.1"

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

dotenvy.workspace = true
dotenvy_macro.workspace = true

firebase-auth.workspace = true
anyhow.workspace = true
clap.workspace = true

rand = "0.8.5"
open = "5.0.1"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }

tyche-host = { version = "0.1.0", path = "../tyche-host" }
tyche-character = { version = "0.1.0", path = "../tyche-character" }
jsonwebtoken = "9.2.0"
futures-lite = "2.2.0"
