[package]
name = "tyche-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_renet = "0.0.10"
bincode = "1.3.3"
renet = { version = "0.0.14", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
