[package]
name = "tyche-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, features = ["default"] }
bevy_renet.workspace = true
bevy-inspector-egui = "0.22.1"

serde.workspace = true
bincode.workspace = true

renet.workspace = true
firebase-auth.workspace = true
